syntax = "proto3";

package auth.v1;
option go_package = "./";

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message SignupRequest {
  string username = 1;
  string password = 2;
}

message SignupResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}